# Zikkaron

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.json
.github/workflows/: publish.yml  test.yml
benchmarks/: ABLATION_RESULTS.md  CODEX_BRIEF.md  RESEARCH_FINDINGS.md  eval_conv0_f1only.json  eval_conv0_f1only_v2.json  eval_conv0_f1only_v3.json  eval_conv0_f1only_v4.json  eval_conv0_jscore_7b_4bit.json  eval_conv0_jscore_v4.json  od_diagnostic.py  run_benchmark_gpu.py  run_locomo_ablation.py  run_locomo_jscore.py  run_longmemeval.py  test_e_locomo.py
benchmarks/ablation_runs/: baseline_v16.json  baseline_v16.part0.json  combined_non_regressing.json  combined_non_regressing.part0.json  comet_d2q_reembed_conv0.json  comet_doc2query_conv0.json  comet_query_expansion_conv0.json  comparison_dual_search_only.json  comparison_dual_search_only.part0.json  enrichment_only.json  enrichment_only.part0.json  fusion_convex_only.json  fusion_convex_only.part0.json  gte_reranker_only.json  gte_reranker_only.part0.json  multi_passage_only.json  multi_passage_only.part0.json  (+4 more)
lockstep-specs/: hippocampal-replay.yml
zikkaron/: __main__.py  astrocyte_pool.py  causal_discovery.py  cls_store.py  cognitive_map.py  compression.py  config.py  consolidation.py  crdt_sync.py  curation.py  embeddings.py  engram.py  enrichment.py  fractal.py  hdc_encoder.py  hopfield.py  knowledge_graph.py  metacognition.py  models.py  narrative.py  predictive_coding.py  profiles.py  prospective.py  reconsolidation.py  restoration.py  retrieval.py  rules_engine.py  seed.py  sensory_buffer.py  server.py  sleep_compute.py  staleness.py  storage.py  thermodynamics.py
(+54 files in other folders)
